--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="sky_blue">#008CBA</color>
+    <color name="green">#4daf51</color>
+    <color name="red">#ff0000</color>
+
 </resources>
